--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: snippet-configurations
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5434}/${DB_NAME:db-configurations}
+    username: ${DB_USERNAME:sa}
+    password: ${DB_PASSWORD:password}
   jpa:
     show-sql: true
     hibernate:
@@ -16,9 +16,10 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: ${AUTH_SERVER_URI}
-          client-id: ${AUTH_CLIENT_ID}
-          client-secret: ${AUTH_CLIENT_SECRET}
+          issuer-uri: ${AUTH_SERVER_URI:https://dev-dxazwu1rijz501rx.us.auth0.com/}
+          client-id: ${AUTH_CLIENT_ID:client_id}
+          client-secret: ${AUTH_CLIENT_SECRET:client_secret}
 auth0:
-  audience: ${AUTH0_AUDIENCE}
-
+  audience: ${AUTH0_AUDIENCE:https://dev-dxazwu1rijz501rx.us.auth0.com/}
+server:
+  port: 8082
