--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,16 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8082:8082
+      - "8082:8082"
     environment:
       DB_USER: sa
       DB_PASSWORD: password
       DB_NAME: db-configurations
       DB_HOST: postgres_db
       DB_PORT: 5432
-      NEW_RELIC_EXPERIMENTAL_RUNTIME: true
-      NEW_RELIC_APP_NAME: SnippetConfigurations
-      NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_CONF_KEY}
+      NEW_RELIC_AGENT_ENABLED: true
+      NEW_RELIC_LICENSE_KEY: "5a3c632e11650a1bfcca5dbf2a801591FFFFNRAL"
+      NEW_RELIC_APP_NAME: "SnippetConfigurations"
       AUTH_SERVER_URI: ${AUTH_SERVER_URI}
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
@@ -35,5 +35,3 @@ services:
       - db-configurations:/var/lib/postgresql/data
 volumes:
   db-configurations:
-  blob:
-    external: false
