logs with correlation id

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       DB_HOST: postgres_db
       DB_PORT: 5432
       NEW_RELIC_AGENT_ENABLED: true
-      NEW_RELIC_LICENSE_KEY: "5a3c632e11650a1bfcca5dbf2a801591FFFFNRAL"
-      NEW_RELIC_APP_NAME: "SnippetConfigurations"
+      NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
+      NEW_RELIC_APP_NAME: ${NEW_RELIC_APP_NAME}
       AUTH_SERVER_URI: ${AUTH_SERVER_URI}
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
