--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,29 @@
-version: '3.9'
+version: '3.3'
 
 services:
   api-configurations:
     container_name: "api-configurations"
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/ingsis-grupo1-2024/snippet-configurations-dev:latest
     ports:
       - "8082:8082"
     environment:
       DB_USER: sa
       DB_PASSWORD: password
       DB_NAME: db-configurations
-      DB_HOST: postgres_db
+      DB_HOST: conf_postgres_db
       DB_PORT: 5432
-      NEW_RELIC_AGENT_ENABLED: true
-      NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
-      NEW_RELIC_APP_NAME: ${NEW_RELIC_APP_NAME}
+      NEW_RELIC_APP_NAME: SnippetConfigurations
+      NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_CONF_KEY}
       AUTH_SERVER_URI: ${AUTH_SERVER_URI}
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
 
   db-configurations:
-    container_name: postgres_db
+    container_name: conf_postgres_db
     image: postgres:12
     ports:
-      - 5432:5432
+      - "5434:5432"
     environment:
       POSTGRES_USER: sa
       POSTGRES_PASSWORD: password
