--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ dependencies {
 	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("io.projectreactor:reactor-test")
+	implementation("com.google.code.gson:gson:2.8.8")
 
-	testImplementation("com.playtika.testcontainers:embedded-azurite:3.1.6")
 	testImplementation("org.springframework.cloud:spring-cloud-starter-bootstrap:4.1.2")
 
 	implementation("org.springdoc:springdoc-openapi-starter-webflux-api:2.5.0")
