--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,6 @@ spring:
           client-id: ${AUTH_CLIENT_ID:client_id}
           client-secret: ${AUTH_CLIENT_SECRET:client_secret}
 auth0:
-  audience: ${AUTH0_AUDIENCE:https://dev-dxazwu1rijz501rx.us.auth0.com/}
+  audience: ${AUTH0_AUDIENCE:https://snippet-searcher}
 server:
   port: 8082
